--- a/source/_includes/asides/twitter.html
+++ b/source/_includes/asides/twitter.html
@@ -1,6 +1,6 @@
 {% if site.twitter_user %}
 <section>
-  <h2>Latest Tweets</h2>
+  <h2>Co tam napisałem</h2>
   <ul id="tweets">
     <li class="loading">Status updating...</li>
   </ul>
