--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -1,5 +1,5 @@
 <section>
-  <h2>Recent Posts</h2>
+  <h2>Ostatnie posty</h2>
   <ul id="recent_posts">
     {% for post in site.posts limit: site.recent_posts %}
       <li class="post">
