--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -10,6 +10,7 @@
         <ul class="nav">
           <li><a href="{{ root_url }}/">Home</a></li>
           <li><a href="{{ root_url }}/blog/archives">Blog</a></li>
+	  <li><a href="https://www.google.com/calendar/embed?src=6984p0svjt657rfj0ee8r53n1o%40group.calendar.google.com&ctz=Europe/Warsaw">IT Events</a></li>
           <li><a href="http://about.me/wojtaswojcik">About.me</a></li>
         </ul>
         {% if site.simple_search %}
