nowa chmura tagow, nowe posty

--- a/source/_includes/custom/asides/tag_cloud.html
+++ b/source/_includes/custom/asides/tag_cloud.html
@@ -1,4 +1,4 @@
 <section>
   <h1>Tag</h1>
-    <span id="tag-cloud">{% tag_cloud counter:true %}</span>
+    <span id="tag-cloud">{% tags_cloud %}</span>
 </section>
